[package]
name = "minetech"
version = "0.1.0"
authors = ["Gregory C. Oakes <gregcoakes@gmail.com>"]
edition = "2018"

[dependencies]
yew = "^0.17"
js-sys = "^0.3"
wasm-bindgen = "^0.2"
bevy_webgl2 = { git = "https://github.com/gcoakes/bevy_webgl2", branch = "winit-update" }

[dependencies.bevy]
git = "https://github.com/gcoakes/bevy"
branch = "winit-update"
features = [
  "render",
  "bevy_winit",
]
default-features = false

[dependencies.web-sys]
version = "^0.3"
features = [
  "HtmlCanvasElement",
]

[patch.crates-io]
bevy = { git = "https://github.com/gcoakes/bevy", branch = "winit-update" }